# iaqualink-py

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CLAUDE.md  DOCUMENTATION.md  LICENSE  README.md  iaqualink.jsonl  live_onetouch_test.py  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  test.py  tox.ini
.claude/: review-criteria.md
.claude/agents/: architecture-auditor.md  ha-reviewer.md
.claude/commands/: ha-review.md  release.md  review.md  update-python-version.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  claude-code-review.yml  commitlint.yaml  docs.yml  pythonapp.yml  pythonpackage.yml  pythonpublish.yml  release.yaml
docs/: .nav.yml  index.md
docs/api/: .nav.yml  client.md  device.md  exceptions.md  exo.md  i2d.md  iaqua.md  system.md
docs/api/systems/: .nav.yml  cyclobat.md  cyclonext.md  exo.md  i2d.md  i2d_robot.md  iaqua.md  tcx.md  vortrax.md  vr.md  zs500.md
docs/contributing/: .nav.yml  architecture.md  new-device-type.md  new-system-type.md  setup.md  testing.md
docs/development/: architecture.md  contributing.md
docs/getting-started/: .nav.yml  authentication.md  cli.md  home-assistant.md  i2d.md  installation.md  quickstart.md
docs/guide/: devices.md  examples.md  exo.md  i2d.md  iaqua.md  systems.md
docs/implementation/: .nav.yml  client.md  exo.md  i2d.md  iaqua.md
docs/implementation/systems/: .nav.yml  cyclobat.md  cyclonext.md  exo.md  i2d.md  i2d_robot.md  iaqua.md  tcx.md  vortrax.md  vr.md  zs500.md
docs/reference/: .nav.yml  client.md  exo.md  i2d.md  iaqua.md
docs/reference/systems/: .nav.yml  cyclobat.md  cyclonext.md  exo.md  i2d.md  i2d_robot.md  iaqua.md  tcx.md  vortrax.md  vr.md  zs500.md
scripts/: claude-review-hook.sh  precommit.sh  setup-worktree.sh
src/iaqualink/: __init__.py  __main__.py  chlorinator.py  client.py  const.py  device.py  enums.py  exception.py  onetouch.py  reauth.py  system.py  types.py  typing.py  util.py  version.py
src/iaqualink/cli/: __init__.py  __main__.py  app.py  capture.py
src/iaqualink/shared/: robots.py
src/iaqualink/systems/: __init__.py  _robot_ws.py
src/iaqualink/systems/cyclobat/: const.py  device.py  system.py  ws.py
src/iaqualink/systems/cyclonext/: const.py  device.py  system.py  ws.py
src/iaqualink/systems/exo/: __init__.py  device.py  enums.py  system.py  types.py
src/iaqualink/systems/i2d/: __init__.py  device.py  system.py
src/iaqualink/systems/i2d_robot/: const.py  device.py  protocol.py  system.py
src/iaqualink/systems/iaqua/: __init__.py  device.py  enums.py  system.py  types.py
src/iaqualink/systems/tcx/: device.py  enums.py  system.py  ws.py
src/iaqualink/systems/vortrax/: system.py
src/iaqualink/systems/vr/: const.py  device.py  system.py  ws.py
src/iaqualink/systems/zs500/: __init__.py  device.py  system.py
src/iaqualink/utils/: capture.py  diagnostics.py  reauth.py  redact.py  robots.py  websockets.py
tests/: base.py  base_test_device.py  base_test_system.py  common.py  conftest.py  test_capture.py  test_chlorinator.py  test_cli.py  test_cli_robot.py  test_client.py  test_device.py  test_system.py  test_system_base.py  test_util.py
tests/cli/: conftest.py  test_capture.py  test_climate.py  test_display.py  test_fan.py  test_light.py  test_number.py  test_robot.py  test_select.py  test_sensor.py  test_session.py  test_smoke.py  test_switch.py
tests/conformance/: conftest.py  fixtures.py  test_binary_sensor.py  test_button.py  test_climate.py  test_device.py  test_fan.py  test_light.py  test_number.py  test_select.py  test_sensor.py  test_switch.py  test_system.py  test_vacuum.py
tests/fixtures/cyclobat/: shadow_get.json
tests/fixtures/exo/: shadow_get.json
tests/fixtures/i2d/: control_alldata_read.json
tests/fixtures/iaqua/: session_get_devices.json  session_get_home.json  session_get_onetouch.json
tests/shared/: test_robots.py
tests/systems/: test_robot_ws.py
tests/systems/cyclobat/: factories.py  test_device.py  test_parsing.py  test_system.py  test_ws.py
tests/systems/cyclobat/__snapshots__/: test_parsing.ambr
tests/systems/cyclonext/: factories.py  test_const.py  test_device.py  test_parsing.py  test_system.py  test_ws.py
tests/systems/cyclonext/__snapshots__/: test_parsing.ambr
tests/systems/cyclonext/fixtures/: shadow_get.json
tests/systems/exo/: factories.py  test_device.py  test_parsing.py  test_system.py
tests/systems/exo/__snapshots__/: test_parsing.ambr
tests/systems/i2d/: factories.py  test_device.py  test_parsing.py  test_system.py
tests/systems/i2d/__snapshots__/: test_parsing.ambr
tests/systems/i2d_robot/: factories.py  test_device.py  test_parsing.py  test_protocol.py  test_system.py
tests/systems/i2d_robot/__snapshots__/: test_parsing.ambr
tests/systems/i2d_robot/fixtures/: control_status.json
tests/systems/iaqua/: factories.py  test_device.py  test_parsing.py  test_system.py
tests/systems/iaqua/__snapshots__/: test_parsing.ambr
tests/systems/iaqua/fixtures/: session_control_swc_boost.json  session_get_devices_icl_zones.json  session_get_home.json  session_get_swc_config.json  session_set_swc_config.json
tests/systems/tcx/: factories.py  test_device.py  test_parsing.py  test_system.py  test_ws.py
tests/systems/tcx/__snapshots__/: test_parsing.ambr
tests/systems/tcx/fixtures/: synthetic_ecm_shadow.json  synthetic_fea_shadow.json  (+2 more)
tests/systems/vortrax/: factories.py  test_parsing.py  test_system.py
tests/systems/vr/: factories.py  test_device.py  test_parsing.py  test_system.py  test_ws.py
tests/systems/zs500/: conftest.py  factories.py  test_device.py  test_system.py
tests/utils/: test_crypto.py  test_redact.py  test_robots.py  test_websockets.py
(+4 files in other folders)
