[build-system]
requires = [
    "hatchling>=1.3.1",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "iaqualink"
description = "Asynchronous library for Jandy iAqualink"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.13"
authors = [
    { name = "Florent Thoumie", email = "florent@thoumie.net" },
]
keywords = [
    "iaqualink",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "httpx[http2]>=0.27.0",
    "awsiotsdk",
    "awscrt",
]
dynamic = [
    "version",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "mypy>=1.15.0",
    "PyYAML>=6.0.2",
    "ruff>=0.11.2",
]
test = [
    "coverage[toml]>=7.7.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-icdiff>=0.9",
    "pytest-sugar>=1.0.0",
    "respx>=0.22.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/flz/iaqualink-py"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/iaqualink/version.py"

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]
packages = ["src/iaqualink"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
ignore = [
    "SLF001",  # Some tests currently use private members
    "G004",    # Will fix all f-string logging calls later
]

[tool.coverage.run]
omit = [
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
